@@ -9,6 +9,8 @@ New features:
 		* Spreadsheet linking - allow to synchronize number of rows across multiple spreadsheets
 		* Extended search and replace
 		* Column statistics spreadsheet - child spreadsheet showing various statistical properties of the parent spreadsheet
+	* [notebook]
+		* Export to PDF
 
 Performance improvements:
 	* Make baseline removal much faster by using Eigen3 library (optional dependency)
